# chatbot-solar

./: .dockerignore  .gitignore  Procfile  README.md  assistant.json  credentials_sheets.json  functions.py  main.py  pipeline.yml  prompts.py  pyproject.toml  replit_zip_error_log.txt  requirements.txt  solar_knowledge.docx
.upm/: store.json
app/: __init__.py
app/controllers/: chatbot_controller.py  lead_controller.py  solar_controller.py
app/entities/: assistant.py  lead.py  solar_analisis.py
app/interfaces/: airtable_gateway_interface.py  geocoding_gateway_interface.py  openai_gateway_interface.py
app/prompts/: prompts.py
app/repositories/: airtable_repository.py  geocoding_repository.py  google_sheets_repository.py  openai_repository.py  solarapi_repository.py
app/services/: airtable_client.py  chatbot_service.py  geocoding_client.py  openai_client.py
app/useCases/: get_solar_potential.py  parse_finanacial_analisis.py  save_data_customer.py
app/use_cases/: chatbot_use_case.py  create_lead_use_case.py  get_solar_potential.py  parse_finanacial_analisis.py  save_data_customer.py  solar_panel_calculations_use_case.py
assistant/statics/: assistant.json
test/: test.py
